fix(bibliography): update links

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -37,6 +37,7 @@
     number    = {10},
     pages     = {90--96},
     year      = {2003},
+    url       = {https://ieeexplore.ieee.org/document/1015622},
     publisher = {IEEE}
 }
 
@@ -48,7 +49,8 @@
     volume    = {3},
     number    = {1},
     pages     = {64--79},
-    year      = {2007}
+    year      = {2007},
+    url       = {https://www.researchgate.net/publication/268441498_FOCALE_-_A_Novel_Autonomic_Networking_Architecture}
 }
 
 @inproceedings{strassner2009,
@@ -73,7 +75,7 @@
     title        = {Apex: An Engine for Dynamic Adaptive Policy Execution},
     booktitle    = {IEEE/IFIP Network Operations and Management Symposium (NOMS)},
     year         = {2016},
-    url          = {https://google.com},
+    url          = {https://www.researchgate.net/publication/303564082_Apex_An_Engine_for_Dynamic_Adaptive_Policy_Execution},
     doi          = {10.1109/NOMS.2016.7502880}
 }
 
@@ -82,7 +84,7 @@
     title        = {A Testbed for Policy Driven Closed Loop Network Management},
     booktitle    = {IEEE/IFIP Network Operations and Management Symposium (NOMS)},
     year         = {2018},
-    url          = {https://google.com}, 
+    url          = {https://www.researchgate.net/publication/325059988_A_Testbed_For_Policy_Driven_Closed_Loop_Network_Management}, 
     doi          = {10.1109/NOMS.2018.8406144}
 }
 
@@ -98,8 +100,8 @@
     author       = {ETSI},
     title        = {Zero-touch Network and Service Management (ZSM); Reference Architecture},
     institution  = {ETSI},
-    year         = {2018},
-    url          = {https://google.com},
+    year         = {2019},
+    url          = {https://www.etsi.org/deliver/etsi_gs/ZSM/001_099/002/01.01.01_60/gs_ZSM002v010101p.pdf},
     number       = {ETSI GS ZSM 002 V1.1.1}
 }
 
@@ -107,7 +109,7 @@
     author       = {ONAP},
     title        = {Open Network Automation Platform (ONAP) Architecture White Paper},
     year         = {2018},
-    url          = {https://google.com}
+    url          = {https://www.onap.org/wp-content/uploads/sites/20/2018/06/ONAP_CaseSolution_Architecture_0618FNL.pdf}
 }
 
 @inproceedings{fallon2019,
@@ -115,7 +117,7 @@
     title        = {Autonomic Closed Control Loops for Management, an Idea Whose Time Has Come?},
     booktitle    = {Conference on Network and Service Management (CNSM)},
     year         = {2019},
-    url          = {https://google.com},
+    url          = {https://www.researchgate.net/publication/339554962_Autonomic_Closed_Control_Loops_for_Management_an_idea_whose_time_has_come},
     doi          = {10.23919/CNSM46954.2019.9012687}
 }
 
@@ -124,7 +126,7 @@
     title        = {Zero-touch Network and Service Management (ZSM); Closed-Loop Automation Enablers},
     institution  = {ETSI},
     year         = {2021},
-    url          = {https://google.com},
+    url          = {https://www.etsi.org/deliver/etsi_gs/ZSM/001_099/00901/01.01.01_60/gs_ZSM00901v010101p.pdf},
     number       = {ETSI GS ZSM 009-1 V1.1.1}
 }
 
@@ -133,7 +135,7 @@
     title        = {AI-Driven Zero Touch Network and Service Management in 5G and Beyond: Challenges and Research Directions},
     journal      = {IEEE Network},
     year         = {2020},
-    url          = {https://google.com},
+    url          = {https://www.researchgate.net/publication/339224458_AI-Driven_Zero_Touch_Network_and_Service_Management_in_5G_and_Beyond_Challenges_and_Research_Directions},
     doi          = {10.1109/MNET.001.1900252}
 }
 
@@ -151,7 +153,7 @@
     title        = {AI Closed Loop Automation - Anomaly Detection and Resolution},
     institution  = {TM Forum},
     year         = {2021},
-    url          = {https://google.com},
+    url          = {https://www.tmforum.org/resources/introductory-guide/ig1219-ai-closed-loop-automation-anomaly-detection-and-resolution-v2-1-0/},
     number       = {IG1219 V2.1.0}
 }
 
@@ -159,8 +161,8 @@
     author       = {TM Forum},
     title        = {Closed Loop Automation Implementation Architectures},
     institution  = {TM Forum},
-    year         = {2022},
-    url          = {https://google.com},
+    year         = {2021},
+    url          = {https://www.tmforum.org/resources/how-to-guide/tr284-ai-closed-loop-automation-implementation-architectures-v3-1-0/},
     number       = {TR284 V3.1.0}
 }
 
@@ -169,7 +171,7 @@
     title        = {AI Closed Loop Automation Management},
     institution  = {TM Forum},
     year         = {2022},
-    url          = {https://google.com},
+    url          = {https://www.tmforum.org/resources/introductory-guide/ig1219a-ai-closed-loop-automation-management-v2-0-0/},
     number       = {IG1219A V1.1.0}
 }
 
@@ -177,7 +179,7 @@
     author       = {NGMN Alliance},
     title        = {Automation and Autonomous System Architecture Framework},
     year         = {2022},
-    url          = {https://google.com},
+    url          = {https://www.ngmn.org/wp-content/uploads/NGMN_AAAF_v1.0.pdf},
     number       = {Version 1.0}
 }
 
@@ -185,7 +187,7 @@
     author       = {ETSI},
     title        = {Experiential Networked Intelligence (ENI); System Architecture},
     institution  = {ETSI},
-    url          = {https://google.com},
+    url          = {https://www.etsi.org/deliver/etsi_gs/ENI/001_099/005/03.01.01_60/gs_ENI005v030101p.pdf},
     year         = {2023},
     number       = {ETSI GS ENI 005 V3.1.1}
 }
@@ -194,7 +196,7 @@
     author       = {ETSI},
     title        = {Overview of Prominent Control Loop Architectures},
     institution  = {ETSI},
-    url          = {https://google.com},
+    url          = {https://www.etsi.org/deliver/etsi_gr/ENI/001_099/017/02.02.01_60/gr_ENI017v020201p.pdf},
     year         = {2024},
     number       = {ETSI GR ENI 017 V2.2.1}
 }
@@ -204,7 +206,7 @@
     title        = {Simplifying Network Orchestration Using Conversational AI},
     booktitle    = {International Conference on Information Networking (ICOIN)},
     year         = {2024},
-    url          = {https://google.com},
+    url          = {https://public.thinkonweb.com/sites/icoin2024/media?key=site/icoin2024/abs/A-2-2.pdf},
     doi          = {10.1109/ICOIN59985.2024.10572160}
 }
 
