--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -57,7 +57,7 @@ Komponentem odpowiedzialnym za pętle sterowania w ONAP jak i zarówno kandydate
 
 
 
-\subsubsection{Architektura referencyjna ETSI ZSM}
+\subsubsection{Architektura referencyjna ETSI ZSM}\hypertarget{sec:zsm}{}
 Nadrzędnym celem projektowym ZSM jest umożliwienie nie wymagającego udziału człowieka (ang. \textit{zero touch}) zarządzania siecią i usługami w środowisku wielu dostawców (ang. \textit{multi-vendor environment}) \cite{etsizsm2018}. Architektura przyjmuje pewien zestaw pryncypiów (zasad):
 \begin{enumerate}
     \item Modularność  
@@ -114,7 +114,7 @@ Architektura ZSM również specyfikuje cykl życia zamkniętej pętli sterowania
 
 
 
-\subsubsection{Architektura referencyjna CLADRA (TM Forum)}
+\subsubsection{Architektura referencyjna CLADRA (TM Forum)}\hypertarget{sec:cladra}{}
 
 TM Forum specyfikuje architekturę referencyjną, która w oparciu o zamknięte pętle sterowania pomaga szybko wykrywać oraz rozwiązywać problemy występujące w sieciach. Podobnie jak architektura ETSI ZSM jest oparta o Open Digital Architecture (ODA) \cite{tmforum2018}. Nie jest to jednak specyfikacja techniczna tak jak w przypadku ETSI. 
 
