--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -1,27 +1,58 @@
 \subsection{Wymagania i założenia}
 
-Po pierwsze Lupus ma przyjąć rolę \hyperlink{def:regulator}{\textit{regulatora}} (ang. \textit{Control System}) znanego z teorii sterowania. Regulowanymi systemami mają być w tym przypadku systemy telekomunikacyjne. Aby odegrać rolę \hyperlink{def:system-eni}{\textit{Systemu ENI}}, platforma musi być w stanie zamodelować oraz uruchomić \underbar{dowolną} zamkniętą pętlę sterowania, zwłaszcza te zawarte w \cite{enioverview}. 
+\subsubsection{Wstęp}
 
-Z racji ogólności systemu oraz zwiększenia szansy na pozytywne przyjęcie w społeczności wybrano Kubernetes jako infrastrukturę dla platformy. Kubernetes natywnie używa zamkniętych pętli sterowania w swojej \hyperlink{def:warstwa-sterowania}{\textit{warstwie sterowania}} (ang. \textit{control plane}), z których użytkownik jest w stanie skorzystać za pomocą mechanizmów rozszerzeń Kubernetes takich jak \hyperlink{def:crd}{\textit{Definicje Zasobów Własnych}} (ang. \textit{Custom Resource Definitions (CRD)}) oraz \hyperlink{def:wzorzec-operator}{\textit{Wzorzec Operatora}} (ang. \textit{Operator Pattern}). Są to mechanizmy dobrze znane w branży. 
+Niniejsza sekcja opisuje proces formułowania wymagań i założeń na platformę Lupus, przedstawiając przy tym aspekt badawczy pracy, który w całości został zebrany w jedno miejsce w celu łatwiejszego zobrazowania tego zagadnienia. Następne podsekcje tej sekcji przedstawiają architekturę w stanie końcowym, abstrahując od poniższej dyskusji. Taki podział ma nadzieję przynieść łatwiejszy odbiór czytelnikowi. Opis w tej podsekcji opiera się na analizach architektur systemów zarządzania i pętli sterowania przeprowadzonym w sekcji poprzedniej.
 
+\subsubsection{Wymagania ogólne}
 
-Wybór Kubernetes narzuca jednakże pewne ograniczenie. Regulowane procesy nie mogą odbywać się w czasie rzeczywistym. Warstwa sterowania Kubernetes działa nieco wolniej. 
+Obie architektury referencyjne \hyperlink{sec:zsm}{ETSI ZSM} oraz \hyperlink{sec:cladra}{CLADRA} definiują je jako frameworki umożliwiające budowanie zamkniętych pętli sterowania składających się z innych komponentów. Przewidują one wiele instancji zamkniętych pętli sterowania działających jednocześnie. Niniejsza praca proponuje architekturę platformy, która umożliwi budowanie oraz uruchamianie takich pętli. Z racji pełnienia tych dwóch ról, powinna również wcielić się w Menadżera Zamkniętych Pętli znanego z architektury CLADRA, który zarządza pętlami. Wnioskujemy z tego 3 główne grupy wymagań funkcjonalnych:
+\begin{itemize}
+    \item wymagania na środowisko działania (ang. \textit{runtime}), //cloud
+    \item wymagania mówiące o tym jakie pętle powinno dać się modelować,
+    \item wymagania mówiące o tym jakie funkcje zarządzania pętlami trzeba zapewnić
+\end{itemize}
 
-Lupus musi być "data-driven" co na polski można przetłumaczyć jako "sterowany danymi". Oznacza to, że platforma nie może narzucać żadnej postaci logiki pętli. Warstwa sterowania Kubernetes musi być w stanie interpretować zamiary użytkownika platformy, który może wyrazić dowolną pętle. Zamiary te wyrażone są w danych. 
+Z racji, iż pętle sterowania wykorzystywane są w wielu branżach, już w tym momencie można postawić wymaganie na to, aby platforma była skierowana do branży teleinformatycznej. 
 
-Logikę pętli możemy podzielić na dwie części: workflow pętli oraz części obliczeniowa. Workflow jest to zdefiniowane elementów oraz relacji między nimi. Częścią obliczeniową za to nazywamy procesowanie wykonywane przez konkretne elementy. Z racji podejścia "data-driven" nie możemy zaszyć części obliczeniowej w warstwie sterowania Kubernetes. Dlatego elementy odpowiedzialne za części obliczeniową są "na zewnątrz" pętli Lupus, przykładowo są to serwery HTTP, do których Lupus wykonując pętle może się odwołać.
+\subsubsection{Wymagania na środowisko działania}
 
-Z tego opisu powstaje garść wymagań oraz założeń, które nie są zbiorami rozłącznymi i wielu miejscach się zacierają, jednakże warto wyszczególnić je w sposób wylistowany poniżej, aby móc łatwiej się do nich odwoływać w dalszej części pracy:
+Platforma musi się wpisać w architekturę referencyjna ETSI ZSM oraz CLADRA, dlatego powinna również być kompatybilna z ich architekturą wyjściową - ODA \cite{tmforum2018} oraz wspierać \hyperlink{sec:zsm}{12 pryncypiów architektury ZSM}. Dodatkowo, wpisując się w aktualne trendy inżynierii oprogramowania platforma powinna być natywna dla chmur obliczeniowych (ang. cloud-native). Chcemy oprzeć platformę o już istniejące środowisko, tak aby nie trzeba było rozwijać własnego. Dużym atutem platformy byłoby znalezienie by środowiska dobrze znanego w branży teleinformatycznej, tak aby zmaksymalizować szansy jej adaptacji w społeczności.  Stąd formułujemy następujące wymagania:
 
 \begin{enumerate}
-    \item \label{req:1} Lupus jest skierowany do branży telekomunikacyjnej.
-    \item \label{req:2} Lupus umożliwia modelowanie i uruchamianie dowolnych architektur zamkniętych pętli sterowania, w szczególności tych zaproponowanych w \cite{enioverview}.
-    \item \label{req:3} Lupus zarządza procesami, które nie wymagają regulacji w czasie rzeczywistym (są "non-realtime").
-    \item \label{req:4} Lupus jest zaimplementowany na bazie Kubernetes, wykorzystując jego \textit{Controller Pattern}.
-    \item \label{req:5} Lupus jest oparty na danych (\textit{data-driven}), co oznacza, że nie narzuca i nie ma wbudowanej żadnej domyślnej logiki pętli.
-    \item \label{req:6} Faktyczne komponenty przetwarzające w pętli (część obliczeniowa) Lupus są zewnętrzne względem niego (np. serwery HTTP, szczególnie Open Policy Agent).
-    \item \label{req:7} Lupus powinien być w stanie regulować pracą dowolnego systemu teleinformatycznego bez żadnych jego modyfikacji.
-    \item \label{req:8} Zamodelowanie pętli oraz wyrażenie jej \hyperlink{def:workflow-petli}{\textbf{Workflow}} w Lupus nie powinno wymagać umiejętności technicznych.
+    \setcounter{enumi}{0} 
+    \item \label{req:1} Środowisko działania powinno być dobrze znane w branży teleinformatycznej
+    \item \label{req:2} Środowisko powinno wspierać 12 pryncypiów architektury ZSM
+    \item \label{req:3} Środowisko powinno być \textit{cloud-native}
 \end{enumerate}
 
-Powyższa lista nazwana jest Wymaganiami i referowana w dalszej części dokumentu. 
+\subsubsection{Wymagania na modelowanie pętli}
+
+Punktem wyjścia jest możliwość zamodelowania dowolnej zamkniętej pętli sterowania przeanalizowanej w \hyperlink{sec:25}{podsekcji 2.4}. Przede wszystkim wymagane jest, aby zapewnić  mechanizmów feedback'u i feedforward, co oznacza po prostu komunikacje pomiędzy elemetami. Wymagane jest też wsparcie wszystkich opisanych typów pętli takich jak hierarchiczne, rozproszone czy federacyjne. Cechy adaptywności oraz kognitywności pętli nie tyczą się samej platformy, a raczej są implementowane w komponentach pętli wykonujących jej logikę obliczeniową (np. komponenty sztucznej inteligencji). Przykładowo w architekturze ETSI ZSM, te aspekty będą odzwierciedlone w serwisach zarządzania. Należy, więc w tym momencie zaznaczyć, iż cześć obliczeniowa logiki pętli jest delegowana przez platformę do komponentów zewnętrznych, które logicznie uruchomione są w innym miejscu, tak jak definiują to architektury referencyjne ETSI ZSM oraz CLADRA. Porównanie pętli OODA z MAPE-K pokazuje nam, że modelowane pętle mogą być zarówno sekwencyjne jak i nie. Sekwencyjność polega na wykonaniu operacji danego elementu jeden po drugim, brak sekwencyjność oznacza współbieżność elementów. W projekcie platformy przyjmujemy, iż współbieżność jest bardziej ogólna i na jej podstawie da się zaimplementować sekwencyjność. Sekwencyjność w współbieżnie działających elementach można osiągać poprzez pobudzanie ich w ustanowionej kolejności. Z kolei pętle niesekwencyjne działają cały czas w oczekiwaniu na otrzymanie jednego z sygnałów: feedback, feedforward lub sygnału ze środowiska zewnętrznego. Dlatego definiujemy wymaganie, iż element jest "pobudzany" danymi, co również wpisuje się w pryncypia architektury ZSM. Jak widzimy w pętli OODA, dany element pętli może pobudzać wiele innych elementów, niekoniecznie jeden, a w przypadku niektórych elementów możliwa też jest komunikacja ze środowiskiem zewnętrznym. Wnętrze elementu "Orient" pętli OODA posiada wewnętrzną skomplikowaną strukturę, może wykonywać wiele operacji (w tym wewnętrzną pętle). Wewnątrz elementu "Decide" widać podjęcie decyzji, które zmienia przebieg pętli. Każda iteracja pętli może mieć inny przebieg. 
+
+Tak jak wskazuje \cite{fallon2019} wyrażanie modelu pętli powinno być zestandaryzowane i ujednolicone, tak aby zapoznanie się z jedną notacją lub językiem pozwalało na jej wielokrotne użycie w celu modelowania wielu różnych pętli sterowania. Użycie notacji nie powinno wymagać wyspecjalizowanej wiedzy technicznej, aby zwiększyć potencjalne grono użytkowników platformy. W idealnym przypadku platforma oferuje interfejs graficzny w celu łatwiejszego modelowania pętli, który pod spodem dokonuje translacji na zestandaryzowaną notację. Element wykonawczy, interpretujący notację, w której wyrażone jest workflow pętli powinien oraz sama notacji powinny być ogólne, nie narzucać żadnej logiki lub schematu pętli. Jedna pętla sterowania zazwyczaj dedykowana jest dla jednej funkcji zarządzania, jednego systemu zarządzanego lub domeny zarządzania, należy uogólnić to pojęcie. Z racji, że architektury ZSM oraz CLADRA przystosowane są do działania w środowisku wielu dostawców (ang. \textit{multi-vendor environment}) oraz zgodnie z tym co proponuje pętla Focale v3, czyli konwersja danych pobieranych na jednolity wewnętrznie rozumiany model Platforma Lupus również powinna wspierać taką funkcjonalność, z tą różnicą że nie nastawia się na żaden konkretny model. Dodatkowo, systemy zarządzane w celu integracji z Lupus nie powinny być modyfikowane. Należy wprowadzić komponent, który zarówno integruje system zarządzany z Lupus bez jego modyfikacji oraz dokonuje translacji zbieranych danych na format wewnętrzny.
+
+Z powyższych rozważań zdefiniowano następujące wymagania:
+\begin{enumerate}
+    \setcounter{enumi}{3} 
+    \item \label{req:4} Platforma wspiera komunikacje między elementami pętli poprzez "pobudzanie" ich danymi.
+    \item \label{req:5} Platforma wspiera koordynację pomiędzy pętlami w sposób hierarchiczny, federacyjny oraz rekurencyjny.
+    \item \label{req:6} Elementy pętli działają współbieżnie.
+    \item \label{req:7} Część obliczeniowa logiki pętli delegowana jest do komponentów zewnętrznych.
+    \item \label{req:8} Element może pobudzać wiele elementów pętli lub komunikować się ze środowiskiem zewnętrznym.
+    \item \label{req:9} Wewnętrznie element może posiadać własne workflow pozwalające np. na podejmowanie decyzji zmieniających przebieg pętli.
+    \item \label{req:10} Element jest sterowany danymi (ang. \textit{data-driven}).
+    \item \label{req:11} Wyrażanie modelu pętli powinno być zestandaryzowane i ujednolicone poprzez określoną notację lub język.
+    \item \label{req:12} Proponowana notacja nie powinna wymagać specjalistycznych umiejętności technicznych.
+    \item \label{req:13} Kod notacji powinno dać utworzyć się za pomocą interfejsu graficznego.
+    \item \label{req:14} Notacja powinna w jednolity sposób rozpatrywać zarządzany przez siebie byt.
+    \item \label{req:15} Pętla komunikując się ze środowiskiem zewnętrznym powinna to robić za pośrednictwem komponentu pozwalającego na translacje formatów danych oraz integrację.
+\end{enumerate}
+
+Należy wyjaśnić pojęcia środowiska zewnętrznego oraz komponentów zewnętrznych. Komponenty zewnętrze są zewnętrzne względem platformy, ale działają w obrębie lub na rzecz systemu zarządzania (ENI, ZSM lub CLADRA). Środowisko zewnętrzne, zaś jest również zewnętrzne dla samego systemu zarządzania specyfikowanego przez ETSI lub TM Forum i oznacza najczęściej infrastrukturę sieciową. 
+
+\subsubsection{Wymagania na zarządzanie pętlami}
+
+\subsubsection{Dyskusja}
+
+
