--- a/tex/2-stan-wiedzy/4-przeglad.tex
+++ b/tex/2-stan-wiedzy/4-przeglad.tex
@@ -59,7 +59,7 @@ Komponentem odpowiedzialnym za pętle sterowania w ONAP jak i zarówno kandydate
 
 \subsubsection{Architektura referencyjna ETSI ZSM}\hypertarget{sec:zsm}{}
 Nadrzędnym celem projektowym ZSM jest umożliwienie nie wymagającego udziału człowieka (ang. \textit{zero touch}) zarządzania siecią i usługami w środowisku wielu dostawców (ang. \textit{multi-vendor environment}) \cite{etsizsm2018}. Architektura przyjmuje pewien zestaw pryncypiów (zasad):
-\begin{enumerate}
+\begin{enumerate}\hypertarget{list:2}{}
     \item Modularność  
     \item Rozszerzalność  
     \item Skalowalność  
