--- a/tex/3-architektura/2-wymagania-i-zalozenia.tex
+++ b/tex/3-architektura/2-wymagania-i-zalozenia.tex
@@ -1,4 +1,4 @@
-\subsection{Wymagania i założenia}
+\subsection{Wymagania i założenia}\label{sec:32}
 
 \subsubsection{Wstęp}
 
@@ -62,7 +62,7 @@ Wymagania w tej kategorii są bardzo jasno określone i nie wymagają żadnych r
 
 \subsubsection{Dyskusja}
 
-Pracę rozpoczęto od wyboru środowiska wykonawczego, które spełniałoby postawione mu wymagania (\ref{req:1}, \ref{req:2}, \ref{req:3}). Oprogramowaniem, które od razu przychodzi na myśli w zgodzie z hasłem cloud-native jest Kubernetes\footnote{\url{https://kubernetes.io}}. Jest on stworzony w celu wdrażania oprogramowania, które jest modularne oraz skalowalne co świetnie wpisuje się w pryncypia architektury ZSM oraz, z racji szerokiej adopcji w systemach wielu dostawców, jest to platforma dobrze znana w branży. Dodatkowo, Kubernetes swoim wbudowanym zasobom (ang. \textit{built-in resources}) takim jak Pody czy Wdrożenia (ang. \textit{deployments}) zapewnia funkcjonalności definiowane przez Wymaganie \ref{req:16}, co nasuwa pewien trop. Postawiono hipotezę, że gdyby pętle jako byt mogły występować tak samo jak zasoby wbudowane Kubernetes i podlegać dokładnie takiemu samemu cyklowi zarządzania, to wtedy wyborem Kuberenetes pokryto by zestaw wymagań \ref{req:1}-\ref{req:3} oraz wymaganie \ref{req:16}. Krótka analiza pokazała, że jest to możliwe, bowiem Kubernetes pozwala definiować tak zwane zasoby własne\footnote{\url{https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/}} (ang. \textit{Custom Resources}), które można rejestrować w swoim klastrze Kubernetes i korzystać dokładnie w ten sam sposób jak z zasobów wbudowanych. Zapoznano się dokładnie z tym konceptem. Każdy zasób wbudowany w Kubernetes ma swój kontroler, który reguluje jego działanie\footnote{\url{https://kubernetes.io/docs/concepts/architecture/controller/}}. Dla zasobów własnych możliwe jest ich rozwijanie za pomocą Wzorca Operatora\footnote{\url{https://kubernetes.io/docs/concepts/extend-kubernetes/operator/}} (ang. \textit{Operator Pattern}). Kontrolery dla zasobów własnych nazywamy operatorami. Operatory można tworzyć za pomocą framework'u Kubebuilder\footnote{\url{https://book.kubebuilder.io}}.
+Pracę rozpoczęto od wyboru środowiska wykonawczego, które spełniałoby postawione mu wymagania (\ref{req:1}, \ref{req:2}, \ref{req:3}). Oprogramowaniem, które od razu przychodzi na myśli w zgodzie z hasłem cloud-native jest Kubernetes\footnote{\url{https://kubernetes.io}}. Jest on stworzony w celu wdrażania oprogramowania, które jest modularne oraz skalowalne co świetnie wpisuje się w pryncypia architektury ZSM oraz, z racji szerokiej adopcji w systemach wielu dostawców, jest to platforma dobrze znana w branży. Dodatkowo, Kubernetes swoim wbudowanym zasobom (ang. \textit{built-in resources}) takim jak Pody czy Wdrożenia (ang. \textit{deployments}) zapewnia funkcjonalności definiowane przez Wymaganie \ref{req:16}, co nasuwa pewien trop. Postawiono hipotezę, że gdyby pętle jako byt mogły występować tak samo jak zasoby wbudowane Kubernetes i podlegać dokładnie takiemu samemu cyklowi zarządzania, to wtedy wyborem Kuberenetes pokryto by zestaw wymagań \ref{req:1}-\ref{req:3} oraz wymaganie \ref{req:16}. Krótka analiza pokazała, że jest to możliwe, bowiem Kubernetes pozwala definiować tak zwane zasoby własne\footnote{\url{https://kubernetes.io/docs/concepts/extend-kubernetes/api-extension/custom-resources/}} (ang. \textit{Custom Resources}), które można rejestrować w swoim klastrze i korzystać z nich w dokładnie w ten sam sposób jak z zasobów wbudowanych. Zapoznano się dokładnie z tym konceptem. Każdy zasób wbudowany w Kubernetes ma swój kontroler, który reguluje jego działanie\footnote{\url{https://kubernetes.io/docs/concepts/architecture/controller/}}. Dla zasobów własnych możliwe jest ich rozwijanie za pomocą Wzorca Operatora\footnote{\url{https://kubernetes.io/docs/concepts/extend-kubernetes/operator/}} (ang. \textit{Operator Pattern}). Kontrolery dla zasobów własnych nazywamy operatorami. Operatory można tworzyć za pomocą framework'u Kubebuilder\footnote{\url{https://book.kubebuilder.io}}.
 
 Zmaterializowanie zamknietej pęli sterowania jako zasób Kubernetes spełnia wymaganie \ref{req:16} w następujący sposób:
 \begin{enumerate}[label=Fx.\arabic*] % Dodajemy prefix "Fx." przed numerem
@@ -86,10 +86,36 @@ Zmaterializowanie zamknietej pęli sterowania jako zasób Kubernetes spełnia wy
     \item Przywrócenie pętli do polega na reaplikowaniu jej pliku YAML
 \end{enumerate}
 
-W ten sposób pokryto dwie grupy wymagań: na środowisko wykonawcze oraz na zarządzanie pętlami. Dalsza część pracy skupiała się na eksploracji możliwości pokrycia wymagań na modelowanie pętli. Z racji wyboru Kubernetes oraz Wzorca Operatora, modelowanie pętli oraz urzeczywistnienie tego modelowania, czyli wykonanie jej logiki (workflow) polega na zaproponowaniu notacji używanej w pliku YAML oraz odpowiednim zaprojektowaniu operatora. 
+W ten sposób pokryto dwie grupy wymagań: na środowisko wykonawcze oraz na zarządzanie pętlami. Dalsza część pracy skupiała się na eksploracji możliwości pokrycia wymagań na modelowanie pętli. Z racji wyboru Kubernetes oraz Wzorca Operatora, modelowanie pętli oraz urzeczywistnienie tego modelowania, czyli wykonanie jej logiki (workflow) polega na zaproponowaniu notacji używanej w pliku YAML wraz z odpowiednim zaprojektowaniu operatora. 
 
-Kontrolery w Kubernetes działają na zasadzie zamkniętej pętli sterowania. Gdy w zarządzanym przez nich obiekcie dojdzie do jakichś zmian, zostają one o tym poinformowane. Misją kontrolera jest sprawdzić wtedy rozbieżności między stanem aktualnym (statusem zasobu), a stanem pożądanym i jeśli takowy występuje wykonać operacje doprowadzające stan aktualny do postaci pożądanego. Taki proces nazywamy rekoncylacją. Oznacza on pogodzenie ze sobą dwóch chwilowo rozbieżnych stanów. Stan aktualny wyrażony jest jako \texttt{status} danego zasobu i zapisany w bazie etcd\footnote{\url{https://bulldogjob.pl/readme/etcd-czyli-mozg-klastra-kubernetes}}, zaś stan pożądany zdefiniowany jest w pliku YAML jako pole \texttt{spec} jak i również przechowywany w bazie etcd. Gdy z jakiegoś powodu dojdzie do zmiany jednego z tych pól warstwa sterowania Kubernetes pobudza kontroler żądaniem o rekoncylacje. Mechanizm ten nasuwa pomysł na spełnienie wymagania \ref{req:4}. Komunikacja elementów mogła by polegać na wzajemnym pobudzaniu się zmianami pola \texttt{status} w obiektach ich reprezentujących. Dane, którymi ma być zrealizowane pobudzanie wpisywane by były do pola \texttt{status}, które operator może odczytać w trakcie swojej operacji. Dlatego podjęto decyzję, iż każdy element pętli będzie reprezentowany poprzez obiekt Kubernetes\footnote{url{https://kubernetes.io/docs/concepts/overview/working-with-objects/}} typu własnego o nazwie \texttt{Element}. Zasób własny reprezentujący całą pętle nazwany został dla rozróżnienia \texttt{Master}. Uczynienie elementu pętli obiektem Kubernetes spełnia wymaganie \ref{req:6}, albowiem obiekty te istnieją nieustannie w klastrze, a ich kontrolery mogą zostać wywołane w dowolnym momencie poprzez żądanie rekoncylacji, co przekłada się na rozpoczęcie działania elementu poprzez pobudzenie danymi. W momencie gdy zasób \texttt{Element} reprezentuje pojedynczy element pętli, \texttt{Master} odpowiedzialny jest za instancjonowanie oraz zarządzanie cyklem życia elementów. Operator zasobu \texttt{Master} uruchamiany jest raz w momencie instancjonowania jego obiektu. Czyta on wtedy plik YAML, który mówi mu jakie elementy ma on stworzyć. Z racji, że elementy specyfikują model pętli to jego notacja powinna być zestandaryzowana i ujednolicona. Notacje nazwano LupN. Notacja LupN opisuje elementy pętli oraz komunikacje między nimi. Opiera się ona na obiektach, które w podczas pobudzenia danego elementu są interpretowane przez operator. Każdy element posiada obiekt akcji, który definiuje jego wewnętrzne workflow (w celu spełnienia wymagania \ref{req:9}) oraz obiekt o nazwie \texttt{next} reprezentujący komponenty, do których należy przekazać swoje dane wyjściowe. W celu spełnienia wymagania \ref{req:8} obiekt \texttt{next} może reprezentować albo inne elementy danej pętli albo komponenty systemu zarządzania odpowiedzialne za część obliczeniową logiki pętli. W przypadku elementów końcowych może to być też środowisko zewnętrze. Komponenty odpowiedzialne za część obliczeniową logiki pętli oraz środowisko zewnętrzne jest reprezentowane przez obiekt Destynacji, które specyfikacje komunikacje za pośrednictwem protokołu HTTP. Wybór wsparcie tego protokołu jest podyktowany jest szeroką adaptacją z systemach rozproszonych korzystających z architektur mikroserwisowych.
+Kontrolery w Kubernetes działają na zasadzie zamkniętej pętli sterowania. Gdy w zarządzanym przez nich obiekcie dojdzie do jakichś zmian, zostają one o tym poinformowane. Misją kontrolera jest sprawdzić wtedy rozbieżności między stanem aktualnym, a stanem pożądanym i jeśli takowa występuje wykonać operacje doprowadzające stan aktualny do postaci pożądanego. Taki proces nazywamy rekoncylacją. Oznacza on pogodzenie ze sobą dwóch chwilowo rozbieżnych stanów. Stan aktualny wyrażony jest jako \texttt{status} danego zasobu i zapisany w bazie etcd\footnote{\url{https://bulldogjob.pl/readme/etcd-czyli-mozg-klastra-kubernetes}}, zaś stan pożądany zdefiniowany jest w pliku YAML jako pole \texttt{spec} jak i również przechowywany w bazie etcd. Gdy z jakiegoś powodu dojdzie do zmiany jednego z tych pól warstwa sterowania Kubernetes pobudza kontroler żądaniem o rekoncylacje. Mechanizm ten nasuwa pomysł na spełnienie wymagania \ref{req:4}. Komunikacja elementów mogła by polegać na wzajemnym pobudzaniu się zmianami pola \texttt{status} w obiektach ich reprezentujących. Dlatego podjęto decyzję, iż każdy element pętli będzie reprezentowany poprzez obiekt Kubernetes\footnote{url{https://kubernetes.io/docs/concepts/overview/working-with-objects/}} typu własnego o nazwie \texttt{Element}.
 
-Jeśli chodzi o wewnętrzne workflow elementu to składa się ono ze specyfikacji komunikacji z komponentami zewnętrznymi oraz podejmowania decyzji i rozgałęziania (ang. \textit{fork}) przebiegu pętli. Specyfikacja ta wyrażana jest za pomocą łańcucha obiektów \textbf{akcji} (\texttt{actions}), które ściśle współpracują z \textbf{danymi}. Zgodnie z wymaganiem \ref{req:10} operator elementu musi być ogólny i posiadać interpreter akcji, które mają pozwolić na elastyczną i opartą o dane orkiestrację wykonywanych operacji zarządzania. 
+Dane, którymi ma być zrealizowane pobudzanie wpisywane by były do pola \texttt{status}, które operator może odczytać w trakcie rekoncylacji obiektu. Zasób własny reprezentujący całą pętle nazwany został dla rozróżnienia \texttt{Master}. Uczynienie elementu pętli obiektem Kubernetes spełnia wymaganie \ref{req:6}, albowiem obiekty te istnieją nieustannie w klastrze, a ich kontrolery mogą zostać wywołane w dowolnym momencie poprzez zażądanie rekoncylacji. W momencie gdy zasób \texttt{Element} reprezentuje pojedynczy element pętli, \texttt{Master} odpowiedzialny jest za instancjonowanie oraz zarządzanie cyklem życia elementów. Operator zasobu \texttt{Master} uruchamiany jest raz w momencie instancjonowania jego obiektu. Czyta on wtedy plik YAML, który mówi mu jakie elementy ma utworzyć. Z racji, że elementy specyfikują model pętli to jego notacja powinna być zestandaryzowana i ujednolicona (zgodnie z wmyaganiem \ref{req:11}). Notacje nazwano LupN. 
 
-Dane pojawiają się w elemencie jako wartość wpisana przez poprzedni element w ich pole \texttt{status}. Jako format, który umożliwia reprezentacje jakichkolwiek danych wybrano JSON. Elementy współpracją z danymi poprzez obiekty akcji. Akcje definiują zestaw operacji jakie można przeprowadzać na danych. Kluczowym typem akcji jest \texttt{send}, która pozwala na komunikacje z komponentami zewnętrznymi. Akcja \texttt{send} specyfikuje, które pole JSON należy wysłać w żądaniu HTTP, oraz w którym polu należy zapisać odpowiedź. Inne typy akcji służą do odpowiedniej organizacji danych. Pola danych można łączyć, usuwać, zmieniać im nazwy, duplikować. Dane zazwyczaj służą do zapisywania parametrów wysyłanych do komponentów zewnętrznych i zapisywania ich odpowiedzi. Danymi za pośrednictwem akcji można wysterować przebieg pętli (wymaganie \ref{req:9}). Akcje posiadają specjalny typ o nazwie \texttt{switch}, który pozwala wykonać wyrażenie warunkowe na danych i na jego podstawie uzależnić wybór następnej akcji do wykonania.
+Notacja LupN opisuje elementy pętli oraz komunikacje między nimi. Opiera się ona na obiektach, które podczas pobudzenia danego elementu są interpretowane przez operator. Każdy element posiada obiekt akcji, który definiuje jego wewnętrzne workflow (w celu spełnienia wymagania \ref{req:9}) oraz obiekt o nazwie \texttt{next} reprezentujący komponenty, do których należy przekazać swoje dane wyjściowe. W celu spełnienia wymagania \ref{req:8} obiekt \texttt{next} może reprezentować albo inne elementy danej pętli albo komponenty systemu zarządzania odpowiedzialne za część obliczeniową logiki pętli. W przypadku elementów końcowych może to być też środowisko zewnętrze. Komponenty odpowiedzialne za część obliczeniową logiki pętli oraz środowisko zewnętrzne jest reprezentowane przez obiekt Destynacji, który specyfikuje komunikację za pośrednictwem protokołu HTTP. Wybór wsparcia tego protokołu jest podyktowany jest szeroką adaptacją w systemach rozproszonych korzystających z architektur mikroserwisowych.
+
+Jeśli chodzi o wewnętrzne workflow elementu to specyfikuje ono komunikacje z komponentami zewnętrznymi oraz podejmowanie decyzji dotyczących rozgałęziania (ang. \textit{fork}) przebiegu pętli. Specyfikacja ta wyrażana jest za pomocą łańcucha obiektów \textbf{akcji} (\texttt{actions}), które ściśle współpracują z \textbf{danymi}. Zgodnie z wymaganiem \ref{req:10} operator elementu musi być ogólny i posiadać interpreter akcji, które mają pozwolić na elastyczną i opartą o dane orkiestrację wykonywanych operacji zarządzania. 
+
+Dane pojawiają się w elemencie jako wartość wpisana przez poprzedni element polu \texttt{status}. Jako format, który umożliwia reprezentacje jakichkolwiek danych wybrano JSON. Elementy współpracują z danymi poprzez obiekty akcji. Akcje posiadają różne typy, które wspólnie stanowią zestaw operacji jakie można przeprowadzać na danych. Kluczowym typem akcji jest \texttt{send}, która pozwala na komunikacje z komponentami zewnętrznymi (spełniając wymaganie \ref{req:7}) poprzez protokół HTTP. Akcja \texttt{send} specyfikuje, które pole JSON należy wysłać w żądaniu HTTP, oraz w którym polu należy zapisać odpowiedź. Inne typy akcji służą do odpowiedniej organizacji danych. Pola danych można łączyć, usuwać, zmieniać im nazwy, duplikować. Dane zazwyczaj służą do zapisywania parametrów wysyłanych do komponentów zewnętrznych i zapisywania otrzymanych odpowiedzi. Akcje posiadają specjalny typ o nazwie \texttt{switch}, który pozwala wykonać wyrażenie warunkowe na danych i na jego podstawie uzależnić wybór następnej akcji do wykonania (wymaganie \ref{req:10}). Podczas projektowania typów akcji postawiono na atomowość i elastyczność.
+
+Pozostaje jeszcze kwestia komunikacji elementów pętli ze środowiskiem zewnętrznym. Z racji wymagania \ref{req:15} zdefiniowano komponenty, które nazwano agentami translacji. zdecydowano, że tylko użytkownik platformy zna specyfiki swojego środowiska zewnętrznego dlatego to jemu pozostawiono implementacje agentów translacji. zdefiniowano jednakże dwa interfejsy (wejściowy i wyjściowy), z których to specyfikacją dany agent translacji musi być zgodny. 
+
+Warto też wspomnieć o tym, że obecne w wielu architekturach pętli repozytorium wiedzy może być komponentem zewnętrznym, z którym współpracuje element pętli.
+
+Wprowadzone w niniejszej sekcji pojęcia są szerzej omówione w dalszej części dokumentu. 
+
+Poniżej prezentowane jest spełnienie wymagań dotyczących modelowania pęli:
+\begin{enumerate}
+    \setcounter{enumi}{15}
+    \item Elementy są pobudzane poprzez zmianę statusu obiektu Kubernetes.
+    \item Dowolna koordynacja pracy pętli jest możliwa poprzez odpowiednią implementację wejściowych agenta translacji. Jeśli ich serwer HTTP udostępni możliwość pobudzania pętli z zewnątrz, nic nie stoi na przeszkodzie, aby jedna pętla mogła aktywować drugą.
+    \item Wymaganie spełnione poprzez implementacje elementów jako obiekty Kubernetes.
+    \item Operator elementu może używać akcji typu \texttt{send} w celu komunikacji z komponentem zewnętrznym za pomocą protokołu HTTP, posiada również nośnik danych, pozwalający na zapisanie .
+    \item Obiekt notacji LupN wskazujący następny komponent pętli pozwala na zdefiniowanie liczby większej od jeden. Następnym komponentem może być albo element pętli albo dowolny serwer HTTP (np. ze środowiska zewnętrznego).
+    \item Obiekt notacji LupN opisujący wnętrze elementu jest łańcuchem akcji, które stanowią jego wewnętrzne workflow. Pozwala ono sterować przebiegiem pętli za pomocą akcji typu \texttt{switch}. 
+    \item Operator elementu posiada interpreter akcji.
+    \item Modelowanie pętli odbywa się w notacji LupN, której specyfikacja znajduje się w dalszej części dokumentu.
+    \item Kod notacji LupN jest zbiorem obiektów YAML i jest prosty do nauczenia się.
+    \item Możliwa jest implementacja programu, który zamieniał by obiekty graficznie zdefiniowane przez użytkownika na kod LupN.
+    \item Architektura definiuje komponenty zwane Agentami Translacji, które spełniają to wymaganie.
+\end{enumerate}
