--- a/tex/5-test/main.tex
+++ b/tex/5-test/main.tex
@@ -1,4 +1,4 @@
-\section{Test platformy na emulatorze sieci 5G}
+\section{Test platformy na emulatorze sieci 5G}\label{sec:5}
 
 \input{tex/5-test/1-wstep.tex}
 \input{tex/5-test/2-emulator-5g.tex}
